--- a/test/dummy/app/views/articles/_form.html.erb
+++ b/test/dummy/app/views/articles/_form.html.erb
@@ -1,22 +1,6 @@
 <%= form_with(model: article) do |form| %>
-  <% if article.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
-
-      <ul>
-        <% article.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div>
-    <%= form.label :content, style: "display: block" %>
-    <%= form.text_area :content %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
+  <%= article.errors.full_messages.to_sentence %>
+  <%= form.label :content %>
+  <%= form.text_field :content %>
+  <%= form.submit %>
 <% end %>
